# quantum-computers

./: .flake8  .gitignore  README.md  pyproject.toml  quantum-computers.excalidraw  requirements.txt
solvay-app/: eslint.config.mjs  index.html  package-lock.json  package.json  setupVitest.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
solvay-app/.github/: copilot-instructions.md
solvay-app/src/: App.tsx  main.tsx
src/: cert_fetcher.py  elliptic_curve.py  sandbox_nist_p_256.py  sandbox_rsa.py
tests/: test_elliptic_curve.py
